crates/wac-parser/tests/resolution/fail/mismatched-async/foo/bar.wat
(component
  (instance (import "x")
    (type (func async (result string)))
    (export "f" (func (type 0)))
  )
)
